# doc-comments-ai

./: LICENSE  README.md  pyproject.toml
doc_comments_ai/: __main__.py  app.py  constants.py  domain.py  llm.py  treesitter.py  utils.py
doc_comments_ai/treesitter/: __init__.py  treesitter.py  treesitter_c.py  treesitter_cpp.py  treesitter_cs.py  treesitter_go.py  treesitter_hs.py  treesitter_java.py  treesitter_js.py  treesitter_kt.py  treesitter_py.py  treesitter_registry.py  treesitter_rs.py  treesitter_ts.py
tests/: conftest.py  response_parser_test.py  treesitter_query_test.py  write_code_snippet_to_file_test.py
tests/fixtures/: code_fixture_c.py  code_fixture_cpp.py  code_fixture_cs.py  code_fixture_go.py  code_fixture_hs.py  code_fixture_java.py  code_fixture_js.py  code_fixture_kt.py  code_fixture_py.py  code_fixture_rs.py  code_fixture_ts.py  code_fixtures.py  response_fixtures.py
