[tool.poetry]
name = "doc-comments-ai"
version = "0.1.10"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
readme = "README.md"
packages = [{ include = "doc_comments_ai" }]

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter-languages = "^1.7.0"
tree-sitter = "^0.20.1"
python-dotenv = "^1.0.0"
langchain = "^0.0.271"
tiktoken = "^0.4.0"
openai = "^0.27.8"
yaspin = "^3.0.0"
pytest = "^7.4.0"
inquirer = "^3.1.3"

[tool.poetry.scripts]
aicomment = "doc_comments_ai.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
